change file on branch

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ fourth line !!!
 test git fetch
  update after tag created !!!
  create a new branch via git hub!
+ update file an a brach
 </body>
 </html>
