update file on branch v1.2

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ test git fetch
  update after tag created !!!
  create a new branch via git hub!
  update file an a brach
+ update file on branch v1.2
 </body>
 </html>
