--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ fourth line !!!
 test git fetch
  update after tag created !!!
  update on branch v1.2
+ update on branch v1.2 after solve conflits
 </body>
 </html>
